--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="sign_up">Sign Up</string>
     <string name="login">Log In</string>
     <string name="register">Register</string>
+    <string name="product_list">Product List</string>
 
 </resources>
