--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_cart">Keranjang</string>
-    <string name="menu_transaction">Transaksi</string>
+    <string name="menu_transaction">Daftar Transaksi</string>
     <string name="menu_logout">Keluar</string>
 
     <string name="form_username">Full Name</string>
@@ -22,5 +22,11 @@
     <string name="login">Log In</string>
     <string name="register">Register</string>
     <string name="product_list">Product List</string>
+
+    <string name="add">Add</string>
+    <string name="sub_total">Sub Total</string>
+    <string name="qty">Jumlah : </string>
+    <string name="total">Total Pembelian</string>
+    <string name="buy">Buy</string>
 
 </resources>
